# unrolr

./: LICENSE  MANIFEST.in  README.md  extract_dihedral_angles.py  optimize.py  pyproject.toml  requirement.txt  requirements.txt  setup.py  spe.py
docs/source/: conf.py  index.rst  installation.rst  tutorial.rst  unrolr.rst
examples/: README.md  example.py
examples/inputs/: villin.psf
examples/outputs/: configuration.txt  cycle_vs_stress-correlation_rc_0.23_i_2.csv  dihedral_angles.h5  embedding.csv  n_iter_vs_stress-correlation.csv  r_neighbor_vs_stress-correlation.csv  rc_vs_stress-correlation_rc_0.1_1.0_0.01_i_2.csv
scripts/: extract_dihedral_angles.py  search_parameters.py  spe.py  unrolr.py
unrolr/: __init__.py  unrolr.py
unrolr/core/: __init__.py  kernel.cl  pca.py  spe_cpu.py  spe_opencl.py  unrolr.py
unrolr/feature_extraction/: __init__.py  dihedrals.py  extract_dihedral_angles.py  intramolecular_distances.py
unrolr/optimize/: __init__.py  optimize.py
unrolr/plotting/: __init__.py  plot_embedding.py  plot_optimize.py  plot_sampling.py
unrolr/sampling/: __init__.py  sampling.py
unrolr/utils/: __init__.py  dataset.py  utils.py
