[tool.poetry]
name = "unrolr"
version = "0.4.0.6"
description = "Dimensionality reduction method for MD trajectories"
authors = ["jeeberhardt <qksoneo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeeberhardt/unrolr"
keywords=[
	'bioinformatics', 'molecular structures',
    'molecular dynamics', 'OpenCL',
    'dimensionality reduction', 'stochastic proximity embedding',
    'dihedral angles']
classifiers=[
	'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.6',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Topic :: Scientific/Engineering']

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
pyopencl = ">=2015.1"
matplotlib = ">=1.4.3"
MDAnalysis = ">=0.17.0"
h5py = ">=2.5.0"
numpy = ">=1.11.3"
pandas = ">=0.17.1"

[tool.poetry.dev-dependencies]
pyopencl = ">=2015.1"
matplotlib = ">=1.4.3"
MDAnalysis = ">=0.17.0"
h5py = ">=2.5.0"
numpy = ">=1.11.3"
pandas = ">=0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
