[tool.poetry]
name = "unrolr"
version = "0.5"
description = "Dimensionality reduction method for MD trajectories"
authors = ["jeeberhardt <qksoneo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeeberhardt/unrolr"
keywords=[
	'bioinformatics', 'molecular structures',
    'molecular dynamics', 'OpenCL',
    'dimensionality reduction', 'stochastic proximity embedding',
    'dihedral angles']
classifiers=[
	'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Topic :: Scientific/Engineering']

[tool.poetry.dependencies]
python = ">=3.6"
pyopencl = ">=2015.1"
matplotlib = ">=1.4.3"
MDAnalysis = ">=0.17.0"
h5py = ">=2.5.0"
numpy = ">=1.11.3"
scipy = ">=1.2.1"
pandas = ">=0.17.1"

[tool.poetry.dev-dependencies]
pyopencl = ">=2015.1"
matplotlib = ">=1.4.3"
MDAnalysis = ">=0.17.0"
h5py = ">=2.5.0"
numpy = ">=1.11.3"
scipy = ">=1.2.1"
pandas = ">=0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
